--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-dom": "^18.3.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1"
